<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bus Plan</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_on">Schedule On</string>
    <string name="action_off">Schedule Off</string>
    <string name="button_nearby">Nearby Stops</string>
    <string name="favorite_stops">Favorite Stops</string>
    <string name="search_title">Test</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_favorites">Favorite</string>
    <string name="button_favourites">Favorite Stops</string>
    <string name="button_search">Search</string>
    <string name="title_search">Search All Stops</string>
    <string name="button_plan">Plan Trip</string>
    <string name="button_schedule">Scheduler</string>
    <string name="search_hint">Search bus stops</string>
    <string name="button_alarm">Set an alarm</string>
    <string name="Start">Start Stop</string>
    <string name="End">End Stop</string>
    <string name="Dest">Destination</string>
    <string name="Arrive">Arrive Time</string>
    <string name="apiKey">a6030286b6ed4d609f2178e7cc5a17c9</string>
    <string name="title_activity_nearby_stops">NearbyStopsActivity</string>
    <string name="title_activity_nearby_bus_stops">Map</string>
    <string name="title_activity_trip_planner_result">TripPlannerResultActivity</string>
    <string name="title_activity_search_stops_trip_planner">SearchStopsTripPlannerActivity</string>
    <string name="title_activity_draw_route">Bus Route</string>
    <string name="title_activity_draw_route_helper">drawRouteHelperActivity</string>
    <string name="widget_stop_box">Bus Stop Name</string>
    <string name="create_widget">Create Widget</string>
    <string name="reminder_title">Reminders</string>
    <string name="add_reminder_button">Add Reminder</string>
    <string name="database_message">Fetching Data From CUMTD</string>

</resources>
