<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_on"
        android:title="@string/action_on"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_off"
        android:title="@string/action_off"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>