<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_nearby"
        android:id="@+id/button"
        android:onClick="toNearbyStops"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:id="@+id/button2"
        android:layout_below="@+id/imageButton"
        android:onClick="toSearchStops"
        android:layout_toRightOf="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/button" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_plan"
        android:onClick="toTripPlanner"
        android:id="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_schedule"
        android:onClick="toScheduler"
        android:id="@+id/button4"
        android:layout_below="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/stops"
        android:layout_below="@+id/textView6">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/favorite_stops"
        android:id="@+id/textView6"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
